--- a/Letter/View/Base.lproj/Main.storyboard
+++ b/Letter/View/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -23,6 +24,28 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0JI-04-0ez">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iT9-bK-d96">
+                                <rect key="frame" x="0.0" y="600" width="375" height="66.5"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jiq-kb-0YL">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AQE-f4-SyQ">
+                                <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
+                                <color key="backgroundColor" name="green"/>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifierFrame" translatesAutoresizingMaskIntoConstraints="NO" id="ozL-5C-2F3">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DUe-mh-cvw">
+                                <rect key="frame" x="10" y="537" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="C3s-vf-4Yh"/>
+                                    <constraint firstAttribute="width" secondItem="DUe-mh-cvw" secondAttribute="height" multiplier="1:1" id="Y6A-nf-GtX"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XCo-Mw-m00" customClass="RoundView" customModule="Letter" customModuleProvider="target">
                                 <rect key="frame" x="320" y="20" width="35" height="35"/>
                                 <subviews>
@@ -52,20 +75,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iT9-bK-d96">
-                                <rect key="frame" x="0.0" y="600" width="375" height="66.5"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jiq-kb-0YL">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AQE-f4-SyQ">
-                                <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
-                                <color key="backgroundColor" name="green"/>
-                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocT-gY-8JI">
-                                <rect key="frame" x="319.5" y="65" width="35" height="35"/>
+                                <rect key="frame" x="320" y="65" width="35" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="ocT-gY-8JI" secondAttribute="height" multiplier="1:1" id="5sb-wF-Y7R"/>
                                 </constraints>
@@ -80,14 +91,20 @@
                             <constraint firstItem="XCo-Mw-m00" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" constant="20" id="0IB-XO-Mee"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="height" secondItem="AQE-f4-SyQ" secondAttribute="height" id="38I-wH-wTE"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" id="4hu-sm-JQ8"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="ozL-5C-2F3" secondAttribute="bottom" id="4ok-E3-p2Z"/>
                             <constraint firstItem="XCo-Mw-m00" firstAttribute="width" secondItem="XCo-Mw-m00" secondAttribute="height" multiplier="1:1" id="6M0-R2-xhM"/>
+                            <constraint firstItem="ozL-5C-2F3" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="ARL-TB-k1E"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="trailing" secondItem="wah-ed-7xa" secondAttribute="trailing" id="JnQ-HM-Qte"/>
                             <constraint firstItem="ocT-gY-8JI" firstAttribute="centerX" secondItem="bZO-kH-bjm" secondAttribute="centerX" id="KVy-fT-Ii0"/>
                             <constraint firstItem="ocT-gY-8JI" firstAttribute="top" secondItem="XCo-Mw-m00" secondAttribute="bottom" constant="10" id="LLH-rP-TU0"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="height" secondItem="0JI-04-0ez" secondAttribute="height" multiplier="0.1" id="Lqp-OH-mkj"/>
+                            <constraint firstItem="DUe-mh-cvw" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" constant="10" id="OHU-P5-8oL"/>
+                            <constraint firstItem="wah-ed-7xa" firstAttribute="trailing" secondItem="ozL-5C-2F3" secondAttribute="trailing" id="TPW-tX-2Gh"/>
+                            <constraint firstItem="wah-ed-7xa" firstAttribute="bottom" secondItem="DUe-mh-cvw" secondAttribute="bottom" constant="10" id="YPi-KP-fRM"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="trailing" secondItem="wah-ed-7xa" secondAttribute="trailing" id="aHP-3L-le6"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="bGm-zO-z5Z"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="cZo-Ky-CK5"/>
+                            <constraint firstItem="ozL-5C-2F3" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" id="cyX-PV-4eC"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="width" secondItem="AQE-f4-SyQ" secondAttribute="width" id="iay-Yb-OAf"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="bottom" secondItem="wah-ed-7xa" secondAttribute="bottom" id="lws-qQ-mAs"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="centerY" secondItem="AQE-f4-SyQ" secondAttribute="centerY" id="mDe-Sn-SqQ"/>
@@ -99,7 +116,9 @@
                         <viewLayoutGuide key="safeArea" id="wah-ed-7xa"/>
                     </view>
                     <connections>
+                        <outlet property="animationView" destination="DUe-mh-cvw" id="dZu-T4-der"/>
                         <outlet property="fxView" destination="iT9-bK-d96" id="lBw-gr-6gn"/>
+                        <outlet property="magnifier" destination="ozL-5C-2F3" id="9K1-kg-hT6"/>
                         <outlet property="sceneView" destination="0JI-04-0ez" id="8cG-AE-KC1"/>
                         <outlet property="stackView" destination="AQE-f4-SyQ" id="ayS-Le-RJm"/>
                         <segue destination="lJB-Ai-lhz" kind="presentation" identifier="endGameSegue" modalPresentationStyle="overFullScreen" id="hHj-Im-9YX"/>
@@ -129,6 +148,7 @@
     </scenes>
     <resources>
         <image name="helpButton" width="50" height="50"/>
+        <image name="magnifierFrame" width="375" height="667"/>
         <namedColor name="green">
             <color red="0.25499999523162842" green="0.83899998664855957" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
