--- a/Letter/View/CustomView/InitialScreens/india.xib
+++ b/Letter/View/CustomView/InitialScreens/india.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -18,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="india" translatesAutoresizingMaskIntoConstraints="NO" id="lmE-Ce-h9i">
-                    <rect key="frame" x="-0.5" y="-6.5" width="375" height="700"/>
+                    <rect key="frame" x="-0.5" y="-23.5" width="375" height="734"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloud01" translatesAutoresizingMaskIntoConstraints="NO" id="EvW-ew-VAR">
                     <rect key="frame" x="221" y="0.0" width="130" height="85"/>
@@ -28,13 +27,23 @@
                     <rect key="frame" x="45" y="83" width="130" height="85"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ar6-uQ-GgW">
+                    <rect key="frame" x="0.0" y="667" width="375" height="200"/>
+                    <color key="backgroundColor" red="0.97254901960784312" green="0.84313725490196079" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="UTO-6R-y03"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="cKq-Vc-o2q" firstAttribute="trailing" secondItem="ar6-uQ-GgW" secondAttribute="trailing" id="0vd-Qs-2Or"/>
                 <constraint firstItem="lmE-Ce-h9i" firstAttribute="centerX" secondItem="cKq-Vc-o2q" secondAttribute="centerX" id="DWT-zg-KYZ"/>
+                <constraint firstItem="ar6-uQ-GgW" firstAttribute="leading" secondItem="cKq-Vc-o2q" secondAttribute="leading" id="O8t-fo-CjR"/>
                 <constraint firstItem="lmE-Ce-h9i" firstAttribute="centerY" secondItem="cKq-Vc-o2q" secondAttribute="centerY" id="UGD-oB-OnN"/>
+                <constraint firstAttribute="bottom" secondItem="ar6-uQ-GgW" secondAttribute="bottom" constant="-200" id="kL5-ID-L1R"/>
                 <constraint firstItem="lmE-Ce-h9i" firstAttribute="width" secondItem="Urs-8J-86V" secondAttribute="width" id="qHG-dJ-Ifq"/>
-                <constraint firstItem="lmE-Ce-h9i" firstAttribute="height" secondItem="Urs-8J-86V" secondAttribute="height" multiplier="1.05" id="yYt-vp-wFQ"/>
+                <constraint firstItem="lmE-Ce-h9i" firstAttribute="height" secondItem="Urs-8J-86V" secondAttribute="height" multiplier="1.1" id="yYt-vp-wFQ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="cKq-Vc-o2q"/>
             <connections>
