--- a/Letter/View/Base.lproj/Main.storyboard
+++ b/Letter/View/Base.lproj/Main.storyboard
@@ -104,10 +104,10 @@
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="bGm-zO-z5Z"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="cZo-Ky-CK5"/>
                             <constraint firstItem="ozL-5C-2F3" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" constant="-1" id="cyX-PV-4eC"/>
+                            <constraint firstAttribute="bottom" secondItem="0JI-04-0ez" secondAttribute="bottom" id="gTn-zr-thY"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="width" secondItem="AQE-f4-SyQ" secondAttribute="width" id="iay-Yb-OAf"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="bottom" secondItem="wah-ed-7xa" secondAttribute="bottom" id="lws-qQ-mAs"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="centerY" secondItem="AQE-f4-SyQ" secondAttribute="centerY" id="mDe-Sn-SqQ"/>
-                            <constraint firstItem="0JI-04-0ez" firstAttribute="bottom" secondItem="wah-ed-7xa" secondAttribute="bottom" id="nrN-Na-DS2"/>
                             <constraint firstItem="ocT-gY-8JI" firstAttribute="width" secondItem="bZO-kH-bjm" secondAttribute="width" id="oTd-np-zuq"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="centerX" secondItem="AQE-f4-SyQ" secondAttribute="centerX" id="yFi-Ss-WGJ"/>
                             <constraint firstItem="wah-ed-7xa" firstAttribute="trailing" secondItem="XCo-Mw-m00" secondAttribute="trailing" constant="20" id="zXI-1R-JXV"/>
